# phoenix

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/convergence/: eth.cpp  usd.cpp
app/data/: main.cpp
app/sniper/: main.cpp
app/triangular/: btc.cpp  btc_eth.cpp  cross.cpp  eth.cpp  main.cpp
include/phoenix/: tags.hpp  utils.hpp
include/phoenix/common/: logger.hpp  profiler.hpp  tcp_socket.hpp
include/phoenix/data/: decimal.hpp  fix.hpp  order_book.hpp  orders.hpp  quotes.hpp
include/phoenix/enums/: log_level.hpp
include/phoenix/graph/: node_base.hpp  router.hpp  router_handler.hpp
include/phoenix/helpers/: conversion.hpp
include/phoenix/strategies/convergence/: config.hpp  quoter.hpp  risk.hpp  stream.hpp
include/phoenix/strategies/copycat/: config.hpp  quoter.hpp
include/phoenix/strategies/data/: config.hpp  risk.hpp  stream.hpp
include/phoenix/strategies/sniper/: config.hpp  hitter.hpp  risk.hpp  stream.hpp
include/phoenix/strategies/triangular/: config.hpp  hitter.hpp  risk.hpp  stream.hpp  utils.hpp
include/phoenix/strategies/triangular/btc/: hitter.hpp
include/phoenix/strategies/triangular/btc_eth/: hitter.hpp
include/phoenix/strategies/triangular/cross/: hitter.hpp
include/phoenix/strategies/triangular/eth/: hitter.hpp
include/phoenix/tools/: fix_circular_buffer.hpp  rolling_average.hpp
src/: CMakeLists.txt  utils.cpp
src/data/: fix.cpp
src/strategies/triangular/: utils.cpp
src/tools/: fix_circular_buffer.cpp
stablearb/: .gitignore  CMakeLists.txt  README.md  todo.txt
stablearb/app/: CMakeLists.txt  convergence.cpp
stablearb/app/convergence/: eth.cpp  usd.cpp
stablearb/include/stablearb/: config.hpp  logger.hpp  price.hpp  profiler.hpp  router.hpp  sender.hpp  sim.hpp  stream.hpp  tags.hpp
stablearb/include/stablearb/common/: logger.hpp  profiler.hpp  sender.hpp  stream.hpp
stablearb/include/stablearb/convergence/: quoter.hpp  risk.hpp  stream.hpp
stablearb/include/stablearb/data/: config.hpp  decimal.hpp  fix.hpp  price.hpp  quotes.hpp
stablearb/include/stablearb/enums/: log_level.hpp
stablearb/include/stablearb/graph/: node_base.hpp  router.hpp  router_handler.hpp
stablearb/include/stablearb/helpers/: conversion.hpp
stablearb/src/: CMakeLists.txt
stablearb/src/data/: fix.cpp
usdarb/: .clang-format  CMakeLists.txt
usdarb/include/usdarb/: router.hpp
usdarb/src/: CMakeLists.txt  main.cpp
